HW3 advanced version